Correcting list processing to remove null issues